Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31087

Crash at shutdown in Lua plugin support

    XMLWordPrintable

Details

    • macOS
    • 611f6bdbe (14.0)

    Description

      • open Qt Creator with "-load Lua"
      • open a .lua file in the editor
      • close Qt Creator
      Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
      0   libLua.dylib                  	       0x15203c0ec gettable + 40 (lapi.c:728)
      1   libLua.dylib                  	       0x15203c1b4 lua_rawgeti + 36 (lapi.c:747)
      2   libLua.dylib                  	       0x1520401c8 luaL_unref + 80 (lauxlib.c:692)
      3   libLua.dylib                  	       0x151addeec sol::stateless_reference::deref(lua_State*) const + 44 (sol.hpp:10470)
      4   libLua.dylib                  	       0x151addeb4 sol::basic_reference<false>::deref() const + 40 (sol.hpp:10575)
      5   libLua.dylib                  	       0x151adde78 sol::basic_reference<false>::~basic_reference() + 88 (sol.hpp:10665)
      6   libLua.dylib                  	       0x151ae3604 sol::basic_reference<false>::~basic_reference() + 28 (sol.hpp:10662)
      7   libLua.dylib                  	       0x151ae6e94 sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>>::~basic_protected_function() + 32 (sol.hpp:21298)
      8   libLua.dylib                  	       0x151ae64e4 sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>>::~basic_protected_function() + 28 (sol.hpp:21294)
      9   libLua.dylib                  	       0x151b6d5b4 Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()::~() + 40 (fetch.cpp:313)
      10  libLua.dylib                  	       0x151b58e14 Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()::~() + 28 (fetch.cpp:313)
      11  libLua.dylib                  	       0x151b6c5a0 std::__1::__compressed_pair_elem<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'(), 0, false>::~__compressed_pair_elem() + 28 (compressed_pair.h:41)
      12  libLua.dylib                  	       0x151b6c78c std::__1::__compressed_pair<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()>>::~__compressed_pair() + 28 (compressed_pair.h:94)
      13  libLua.dylib                  	       0x151b6c760 std::__1::__compressed_pair<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()>>::~__compressed_pair() + 28 (compressed_pair.h:94)
      14  libLua.dylib                  	       0x151b6d358 std::__1::__function::__alloc_func<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()>, void ()>::destroy[abi:v160006]() + 24 (function.h:202)
      15  libLua.dylib                  	       0x151b6c100 std::__1::__function::__func<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&)::operator()(sol::basic_table_core<false, sol::basic_reference<false>> const&, sol::basic_protected_function<sol::basic_reference<false>, false, sol::basic_reference<false>> const&, sol::this_state const&) const::'lambda0'()>, void ()>::destroy_deallocate() + 60 (function.h:348)
      16  libLua.dylib                  	       0x151aebdb8 std::__1::__function::__value_func<void ()>::~__value_func[abi:v160006]() + 120 (function.h:471)
      17  libLua.dylib                  	       0x151aebd30 std::__1::__function::__value_func<void ()>::~__value_func[abi:v160006]() + 28 (function.h:467)
      18  libLua.dylib                  	       0x151aebd04 std::__1::function<void ()>::~function() + 28 (function.h:1143)
      19  libLua.dylib                  	       0x151ae2c8c std::__1::function<void ()>::~function() + 28 (function.h:1143)
      20  libLua.dylib                  	       0x151b63144 Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()::~() + 44 (fetch.cpp:233)
      21  libLua.dylib                  	       0x151b59734 Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()::~() + 28 (fetch.cpp:233)
      22  libLua.dylib                  	       0x151b620e0 std::__1::__compressed_pair_elem<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'(), 0, false>::~__compressed_pair_elem() + 28 (compressed_pair.h:41)
      23  libLua.dylib                  	       0x151b622e0 std::__1::__compressed_pair<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()>>::~__compressed_pair() + 28 (compressed_pair.h:94)
      24  libLua.dylib                  	       0x151b622b4 std::__1::__compressed_pair<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()>>::~__compressed_pair() + 28 (compressed_pair.h:94)
      25  libLua.dylib                  	       0x151b62eec std::__1::__function::__alloc_func<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()>, void ()>::destroy[abi:v160006]() + 24 (function.h:202)
      26  libLua.dylib                  	       0x151b61c40 std::__1::__function::__func<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'(), std::__1::allocator<Lua::Internal::addFetchModule()::$_0::operator()(sol::state_view) const::'lambda'(QString, std::__1::function<void ()>, std::__1::function<void ()>)::operator()(QString, std::__1::function<void ()>, std::__1::function<void ()>) const::'lambda4'()>, void ()>::destroy_deallocate() + 60 (function.h:348)
      27  libCore.dylib                 	       0x12007b06c std::__1::__function::__value_func<void ()>::~__value_func[abi:v160006]() + 120 (function.h:471)
      28  libCore.dylib                 	       0x12007afe4 std::__1::__function::__value_func<void ()>::~__value_func[abi:v160006]() + 28 (function.h:467)
      29  libCore.dylib                 	       0x12007afb8 std::__1::function<void ()>::~function() + 28 (function.h:1143)
      30  libCore.dylib                 	       0x12007a990 std::__1::function<void ()>::~function() + 28 (function.h:1143)
      31  libCore.dylib                 	       0x12007a8e8 Utils::InfoBarEntry::~InfoBarEntry() + 56 (infobar.h:28)
      32  libCore.dylib                 	       0x12007a8a0 Utils::InfoBarEntry::~InfoBarEntry() + 28 (infobar.h:28)
      33  libCore.dylib                 	       0x12007a878 void std::__1::__destroy_at[abi:v160006]<Utils::InfoBarEntry, 0>(Utils::InfoBarEntry*) + 24 (construct_at.h:66)
      34  libCore.dylib                 	       0x12007a83c Utils::InfoBarEntry* std::__1::__destroy[abi:v160006]<Utils::InfoBarEntry*>(Utils::InfoBarEntry*, Utils::InfoBarEntry*) + 56 (construct_at.h:82)
      35  libCore.dylib                 	       0x12007a798 void std::__1::destroy[abi:v160006]<Utils::InfoBarEntry*>(Utils::InfoBarEntry*, Utils::InfoBarEntry*) + 32 (construct_at.h:115)
      36  libCore.dylib                 	       0x12007a76c QtPrivate::QGenericArrayOps<Utils::InfoBarEntry>::destroyAll() + 164 (qarraydataops.h:397)
      37  libCore.dylib                 	       0x12007a62c QArrayDataPointer<Utils::InfoBarEntry>::~QArrayDataPointer() + 56 (qarraydatapointer.h:109)
      38  libCore.dylib                 	       0x12007a5e4 QArrayDataPointer<Utils::InfoBarEntry>::~QArrayDataPointer() + 28 (qarraydatapointer.h:107)
      39  libCore.dylib                 	       0x12007a5b8 QList<Utils::InfoBarEntry>::~QList() + 28 (qlist.h:70)
      40  libCore.dylib                 	       0x12007a308 QList<Utils::InfoBarEntry>::~QList() + 28 (qlist.h:70)
      41  libCore.dylib                 	       0x12007a2a8 Utils::InfoBar::~InfoBar() + 60 (infobar.h:89)
      42  libCore.dylib                 	       0x12007a230 Utils::InfoBar::~InfoBar() + 28 (infobar.h:89)
      43  libCore.dylib                 	       0x12007a1f0 Core::Internal::FancyTabWidget::~FancyTabWidget() + 56 (fancytabwidget.h:121)
      44  libCore.dylib                 	       0x12002a914 Core::Internal::FancyTabWidget::~FancyTabWidget() + 28 (fancytabwidget.h:121)
      45  libCore.dylib                 	       0x12002a940 Core::Internal::FancyTabWidget::~FancyTabWidget() + 28 (fancytabwidget.h:121)
      46  QtCore                        	       0x10925aeec QObjectPrivate::deleteChildren() + 152 (qobject.cpp:2222)
      47  QtWidgets                     	       0x106224a30 QWidget::~QWidget() + 1172 (qwidget.cpp:1559)
      48  libCore.dylib                 	       0x120454838 Utils::AppMainWindow::~AppMainWindow() + 28 (appmainwindow.h:12)
      49  libCore.dylib                 	       0x12045d774 Core::Internal::MainWindow::~MainWindow() + 28 (icore.cpp:231)
      50  libCore.dylib                 	       0x12045076c Core::Internal::MainWindow::~MainWindow() + 28 (icore.cpp:231)
      51  libCore.dylib                 	       0x120450798 Core::Internal::MainWindow::~MainWindow() + 28 (icore.cpp:231)
      52  libCore.dylib                 	       0x120449fd0 Core::Internal::ICorePrivate::~ICorePrivate() + 892 (icore.cpp:1495)
      53  libCore.dylib                 	       0x12044a0bc Core::Internal::ICorePrivate::~ICorePrivate() + 28 (icore.cpp:1449)
      54  libCore.dylib                 	       0x12044a0e8 Core::Internal::ICorePrivate::~ICorePrivate() + 28 (icore.cpp:1449)
      55  libCore.dylib                 	       0x12043cce0 Core::ICore::~ICore() + 92 (icore.cpp:411)
      56  libCore.dylib                 	       0x12043cd2c Core::ICore::~ICore() + 28 (icore.cpp:410)
      57  libCore.dylib                 	       0x12043cd58 Core::ICore::~ICore() + 28 (icore.cpp:410)
      58  libCore.dylib                 	       0x12011e62c Core::Internal::CorePlugin::~CorePlugin() + 260 (coreplugin.cpp:98)
      59  libCore.dylib                 	       0x12011e6a0 Core::Internal::CorePlugin::~CorePlugin() + 28 (coreplugin.cpp:88)
      60  libCore.dylib                 	       0x12011e6cc Core::Internal::CorePlugin::~CorePlugin() + 28 (coreplugin.cpp:88)
      61  libExtensionSystem.13.0.83.dylib	       0x10535d3f4 ExtensionSystem::CppPluginSpec::kill() + 136 (pluginspec.cpp:1260)
      62  libExtensionSystem.13.0.83.dylib	       0x10531586c ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) + 728 (pluginmanager.cpp:1677)
      63  libExtensionSystem.13.0.83.dylib	       0x10533beb4 ExtensionSystem::Internal::PluginManagerPrivate::deleteAll()::$_9::operator()(ExtensionSystem::PluginSpec*) const + 40 (pluginmanager.cpp:1048)
      64  libExtensionSystem.13.0.83.dylib	       0x105315f9c void Utils::reverseForeach<QList<ExtensionSystem::PluginSpec*>, ExtensionSystem::Internal::PluginManagerPrivate::deleteAll()::$_9>(QList<ExtensionSystem::PluginSpec*> const&, ExtensionSystem::Internal::PluginManagerPrivate::deleteAll()::$_9 const&) + 108 (algorithm.h:1285)
      65  libExtensionSystem.13.0.83.dylib	       0x105315ef8 ExtensionSystem::Internal::PluginManagerPrivate::deleteAll() + 120 (pluginmanager.cpp:1047)
      66  libExtensionSystem.13.0.83.dylib	       0x10530e6d8 ExtensionSystem::Internal::PluginManagerPrivate::shutdown() + 164 (pluginmanager.cpp:1461)
      67  libExtensionSystem.13.0.83.dylib	       0x10530e62c ExtensionSystem::PluginManager::shutdown() + 20 (pluginmanager.cpp:402)
      68  Qt Creator                    	       0x104bb7de0 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (*)()>::call(void (*&)(), void**) + 32 (qobjectdefs_impl.h:137)
      69  Qt Creator                    	       0x104bb7d74 void QtPrivate::FunctionPointer<void (*)()>::call<QtPrivate::List<>, void>(void (*)(), void*, void**) + 40 (qobjectdefs_impl.h:206)
      70  Qt Creator                    	       0x104bb7cf8 QtPrivate::QCallableObject<void (*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobjectdefs_impl.h:555)
      71  QtCore                        	       0x109263624 QtPrivate::QSlotObjectBase::call(QObject*, void**) + 28 (qobjectdefs_impl.h:469) [inlined]
      72  QtCore                        	       0x109263624 void doActivate<false>(QObject*, int, void**) + 1328 (qobject.cpp:4086)
      73  QtCore                        	       0x109219d04 QCoreApplication::aboutToQuit(QCoreApplication::QPrivateSignal) + 24 (moc_qcoreapplication.cpp:267) [inlined]
      74  QtCore                        	       0x109219d04 QCoreApplication::exit(int) + 52 (qcoreapplication.cpp:1537) [inlined]
      75  QtCore                        	       0x109219d04 QCoreApplication::event(QEvent*) + 96 (qcoreapplication.cpp:2060)
      76  QtWidgets                     	       0x1061e79cc QApplication::event(QEvent*) + 888 (qapplication.cpp:1682)
      77  Qt Creator                    	       0x104bb9d34 SharedTools::QtSingleApplication::event(QEvent*) + 156 (qtsingleapplication.cpp:103)
      78  QtWidgets                     	       0x1061e8e8c QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 (qapplication.cpp:3287)
      79  QtWidgets                     	       0x1061e9ce0 QApplication::notify(QObject*, QEvent*) + 504 (qapplication.cpp:3238)
      80  QtCore                        	       0x109218054 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 212 (qcoreapplication.cpp:1134)
      81  QtCore                        	       0x10921933c QCoreApplication::sendEvent(QObject*, QEvent*) + 16 (qcoreapplication.cpp:1575) [inlined]
      82  QtCore                        	       0x10921933c QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 1464 (qcoreapplication.cpp:1932)
      83  libqcocoa.dylib               	       0x104e9f3cc QCocoaEventDispatcherPrivate::processPostedEvents() + 288 (qcocoaeventdispatcher.mm:900)
      84  libqcocoa.dylib               	       0x104ea0484 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 536 (qcocoaeventdispatcher.mm:922)
      85  CoreFoundation                	       0x1970024d8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28
      86  CoreFoundation                	       0x19700246c __CFRunLoopDoSource0 + 176
      87  CoreFoundation                	       0x1970021dc __CFRunLoopDoSources0 + 244
      88  CoreFoundation                	       0x197000dc8 __CFRunLoopRun + 828
      89  CoreFoundation                	       0x197000434 CFRunLoopRunSpecific + 608
      90  HIToolbox                     	       0x1a17a419c RunCurrentEventLoopInMode + 292
      91  HIToolbox                     	       0x1a17a3fd8 ReceiveNextEventCommon + 648
      92  HIToolbox                     	       0x1a17a3d30 _BlockUntilNextEventMatchingListInModeWithFilter + 76
      93  AppKit                        	       0x19a85fd68 _DPSNextEvent + 660
      94  AppKit                        	       0x19b055808 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 700
      95  AppKit                        	       0x19a85309c -[NSApplication run] + 476
      96  libqcocoa.dylib               	       0x104e9e018 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2128 (qcocoaeventdispatcher.mm:406)
      97  QtCore                        	       0x109221bb0 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 36 (qeventloop.cpp:100) [inlined]
      98  QtCore                        	       0x109221bb0 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 540 (qeventloop.cpp:182)
      99  QtCore                        	       0x1092186a8 QCoreApplication::exec() + 112 (qcoreapplication.cpp:1478)
      100 Qt Creator                    	       0x104b97b98 main + 15328 (main.cpp:885)
      101 dyld                          	       0x196b9a0e0 start + 2360
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            madwinter Marcus Tillmanns
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes